force-app/main/default/objects/Lead_Stage_Automation__mdt/Lead_Stage_Automation__mdt.object-meta.xml
<CustomObject>
    <description>Lead Stage configurations.</description>
    <label>Lead Stage Automation</label>
    <pluralLabel>Lead Stage Automations</pluralLabel>
</CustomObject>