force-app/main/default/objects/Lead_Stage_Automation__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>