force-app/main/default/objects/Lead_Stage_Automation__mdt/fields/Lead_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Store the record type name of CCRM lead.</description>
    <label>Lead Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>