force-app/main/default/objects/Lead_Stage_Automation__mdt/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>Lead Status</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>