force-app/main/default/objects/Lead_Stage_Automation__mdt/fields/Next_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Next_Lead_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Next Lead Status based on the criteria match.</description>
    <label>Next Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
                <default>true</default>
                <label>In progress</label>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Outcome</fullName>
            </value>
            <value>
                <fullName>Opportunity Identified</fullName>
            </value>
            <value>
                <fullName>No Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>