force-app/main/default/objects/Lead_Stage_Automation__mdt/fields/Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Store the possible outcome type values.</description>
    <label>Outcome Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Identified</fullName>
                <default>true</default>
                <label>Opportunity Identified</label>
            </value>
            <value>
                <fullName>No Opportunity</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>