force-app/main/default/objects/Lead_Stage_Automation__mdt/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Response Status from Responses logged for a particular lead.</description>
    <label>Response Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>