force-app/main/default/objects/Lead_Stage_Automation__mdt/fields/Response_Type_CreateOpportunity__c.field-meta.xml
<CustomField>
    <fullName>Response_Type_CreateOpportunity__c</fullName>
    <label>Response Type CreateOpportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>