force-app/main/default/objects/Lead_Stage_Automation__mdt/fields/What_happens_next__c.field-meta.xml
<CustomField>
    <fullName>What_happens_next__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Store what happens next based on Response Status and Create Opportunity flag</description>
    <label>What happens next</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>