force-app/main/default/objects/Lead_Stage_Automation__mdt/listViews/All_MetaData.listView-meta.xml
<ListView>
    <fullName>All_MetaData</fullName>
    <columns>isActive__c</columns>
    <columns>MasterLabel</columns>
    <columns>Lead_Status__c</columns>
    <columns>Response_Status__c</columns>
    <columns>Response_Type_CreateOpportunity__c</columns>
    <columns>Next_Lead_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All MetaData</label>
</ListView>